--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,10 +28,7 @@ jobs:
           go-version: 1.19
 
       - name: Build
-        run: go build -v ./...
-        
-      - name: Test
-        run: go test -v ./...
+        run: docker build -t myapp:latest .
       
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6
