--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,29 +1,33 @@
-name: Build and Push Docker Image
+name: Publish Docker image
 
 on:
   push:
-    branches:
-      - master
-
-env:
-  DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+    branches: ['master']
 
 jobs:
-  build-and-push:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_PASSWORD }}
-      - name: Build Docker image
-        run: |
-          docker build -t zhanyl91/hellowordlatest .
-      - name: Push Docker image
-        run: |
-          docker tag zhanyl91/hellowordlatest ${{ env.DOCKER_USERNAME }}/zhanyl91/hellowordlatestv1
-          docker push ${{ env.DOCKER_USERNAME }}/zhanyl91/hellowordlatest:v1
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: zhanyl91/hellowordlatest
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
